Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/7034495/T7034495.out
T7034495.java:17:17: compiler.err.types.incompatible: T7034495.B<compiler.misc.type.captureof: 1, ?>, T7034495.A<compiler.misc.type.captureof: 2, ?>, (compiler.misc.incompatible.diff.ret: foo, )
1 error
